--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 
 Fábio de Souza Villaça Medeiros <fabiosvm@outlook.com>
 Eduardo de Moura Rodrigues <eduardom.rodrigues@gmail.com>
+Augusto <agarobr@gmail.com>
